third_party/move/move-compiler-v2/tests/checking/utf8-comment/utf-8-in-constant-hexstring.exp

Diagnostics:
error: invalid character
  ┌─ tests/checking/utf8-comment/utf-8-in-constant-hexstring.move:4:35
  │
4 │        const C: vector<u8> = x"abcé ñ ü ß œ ☀ ★ ☯ €";
  │                                   ^ Invalid character: `é`
